Fix SpongeNeo furnace mixin